Made the builder panels look consistent with the widget editors. Closes #403

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,8 @@ en:
     help:
       site_name: "Input your name or business name. This will appear at the top of your mobile site."
       site_url: "Select a URL for your mobile site. It cannot contains spaces or special characters."
+  builder:
+    help:
+      edit_settings: "<p>Edit general settings.</p>"
+      edit_keywords: "<p>Give your traffic... a boost!</p>"
+      edit_tab_bar: "<p>Edit the navigation tab bar at the top of your mobile site.</p><p>Highlight the widgets you want your mobile site visitors to see first by adding them to the navigation tab bar which appears at the top of your mobile site.</p>"
