--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,14 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  home_page:
+    banner:
+      title: "Get Mobilized!"
+      subtitle: "Reach more people with a mobile optimized website."
+    form:
+      title: "Sign Up"
+      subtitle: "It's free."
+  
   account_setup:
     help:
       site_name: "Input your name or business name. This will appear at the top of your mobile site."
