Desktop redirect script hover help copy tweak. Closes #542

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,5 +29,5 @@ en:
     
     settings:
       help:
-        redirect: "Copy this code snippet and paste it into your desktop site’s home page, just before the closing tag."
+        redirect: "To automatically redirect visitors to your mobile site when they visit your desktop site from a mobile phone, copy this code snippet and paste it into your desktop site’s home page, just before the closing &lt;head&gt; tag."
         site_pic: "Note: Large size pictures may take up to 1 minute to load."
