Front page typos. Closes #571

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
   home_page:
     banner:
       title: "Get Mobilized!"
-      subtitle: "Reach more people with a mobile optimized website."
+      subtitle: "Reach more people with a mobile website."
     form:
       title: "Sign Up"
       subtitle: "It's free."
