Fixed an incorrect closing tag

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,7 +116,7 @@ en:
         help: <p>Give your mobile site visitors easy access to your catalog of products</p><br><p>Use this widget to create a mobile optimized catalog of your products.</p>
 
       property-listings:
-        help: <p>Give your mobile site visitors easy access to your property listings.</p><br></p>Use this widget to create a mobile optimized list of properties for lease or sale.</p>
+        help: <p>Give your mobile site visitors easy access to your property listings.</p><br><p>Use this widget to create a mobile optimized list of properties for lease or sale.</p>
 
       reviews:
         help: <p>Show visitors how great you are by adding a link to your online reviews page on your mobile site.</p>
