jwysiwyg photo dialog changes. Closes #102

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,8 @@ en:
 
     jeditor:
       help:
-        default_image: "Useful thumbnail preview is useful."
+        thumb: "<< THUMBNAIL PREVIEW HELP >>"
+        url: "<< URL HELP >>"
 
   widgets:
     helpText:
