--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
       help:
         thumb: "<< THUMBNAIL PREVIEW HELP >>"
         url: "<< URL HELP >>"
+        youtube: "<< YOUTUBE HELP >>"
 
   widgets:
     helpText:
