--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,13 +60,13 @@ en:
         help: <p>Allow your mobile site visitors to call you with a single click.</p>
 
       category:
-        help: <p>Create and organize custom web pages for your mobile site.</p><br><p>Use this widget to create and organize custom web pages for your mobile site.</p>
+        help: <p>Use this widget to create and organize web pages on your mobile site.</p>
 
       coupon:
         help: <p>Add a coupon to your mobile site.</p>
 
       custom-page:
-        help: <p>Add a custom web page for your mobile site.</p>
+        help: <p>Add a web page to your mobile site.</p>
 
       donate:
         help: <p>Use this widget to direct visitors to the online site that allows them to donate to your cause.</p>
@@ -98,13 +98,13 @@ en:
         help: <p>Allow your mobile website visitors to easily leave you an email message.</p><br><p>Messages will be sent to this email address, so check your mail often.</p>
 
       link:
-        help: <p>Add a link to another website on your mobile site.</p>
+        help: <p>Add a link to a web page.</p>
 
       locations:
         help: <p>Give your mobile site visitors easy access to a directory of your business locations.</p><br><p>Use this widget to create a directory of your business locations.</p>
 
       menu:
-        help: <p>Give your mobile site visitors easy access to your menu.</p><br><p>Use this widget to create a mobile optimized version of your menu.</p>
+        help: <p>Use this widget to create a mobile optimized version of your menu.</p>
 
       news:
         help: <p>Add a link to your online news site on your mobile site.</p>
@@ -119,10 +119,10 @@ en:
         subHelp: Picasa album URL
 
       products:
-        help: <p>Give your mobile site visitors easy access to your catalog of products</p><br><p>Use this widget to create a mobile optimized catalog of your products.</p>
+        help: <p>Use this widget to create a mobile optimized catalog of your products or services.</p>
 
       property-listings:
-        help: <p>Give your mobile site visitors easy access to your property listings.</p><br><p>Use this widget to create a mobile optimized list of properties for lease or sale.</p>
+        help: <p>Use this widget to create a mobile optimized list of properties for lease or sale.</p>
 
       reviews:
         help: <p>Show visitors how great you are by adding a link to your online reviews page on your mobile site.</p>
