--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,8 @@ en:
       signup_keys: "Useful information about signup keys."
     confirm:
       concede_site: Are you sure? You will lose ownership of this site.
+    dialog:
+      concede_site: Conceding your ownership of this site will give up your ownership rights. That means you will no longer have control over collaborators.
 
   widgets:
     helpText:
