Updated formatting and css for slogan after merge of branch.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,3 +147,4 @@ en:
 
       companyLogo: "<p>Click here to change your <b>site photo</b>.</p>"
       companyName: "<p>Click here to change your <b>site title</b>.</p>"
+      companySlogan: "<p>Click here to change your <b>site slogan</b>.</p>"
