--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
       help:
         redirect: "To automatically redirect visitors to your mobile site when they visit your desktop site from a mobile phone, copy this code snippet and paste it into your desktop site’s home page, just before the closing &lt;head&gt; tag. <b>Click ? more help.</b>"
         site_pic: "Note: Large size pictures may take up to 1 minute to load."
+        import: "For detailed information, click this help bubble."
 
     jeditor:
       help:
