--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,6 +137,9 @@ en:
         help: <p>Show visitors how great you are by adding a link to your online reviews page on your mobile site.</p>
         subHelp: reviews page
 
+      rss-feed:
+        help: <p>Display a nicely formatted rss feed on your mobile site.</p>
+
       services:
         help: <p>Give your mobile site visitors easy access to your catalog of services.</p><br><p>Use this widget to create a mobile optimized catalog of your services.</p>
 
