--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -142,14 +142,14 @@ en:
 
       booking-request:
         help: <p>Allow your mobile site visitors to email you a booking request.</p><br><p>Booking requests will be sent to this email address, so check your mail often.</p>
-        mobile-message: <p>REPLACE ME</p>
+        mobile-message: <p>Use this field to create a custom message for your mobile visitors.</p>
 
       business-hours:
         help: <p>Let your mobile site visitors know when you are open for business.</p>
 
       call-me-back:
         help: <p>Allow your mobile site visitors to request a call back from you.</p><br><p>Call back requests will be sent to this email address, so check your mail often.</p>
-        mobile-message: <p>REPLACE ME</p>
+        mobile-message: <p>Use this field to create a custom message for your mobile visitors.</p>
 
       call-us:
         help: <p>Allow your mobile site visitors to call you with a single click.</p>
@@ -188,12 +188,12 @@ en:
         subHelp: full website
 
       keep-me-informed:
-        help: <p>Allow your mobile site visitors to request to receive email and text notifications from you.</p><br><p>This widget allows visitors to your mobile site to become fans and follow your latest news via email and text notifications.</p><br><p>You can send email notifications and instant messages to your followers by clicking on the “Email your Followers” or "Send Text to Your Followers" link in the navigation column on the left.</p>
-        mobile-message: <p>REPLACE ME</p>
+        help: <p>Allow your mobile site visitors to subscribe to receive email and text notifications from you.</p><br><p>You can send email notifications and instant messages to your followers by clicking on the “Email your Followers” or "Send Text to Your Followers" link in the navigation column on the left.</p>
+        mobile-message: <p>Use this field to create a custom message for your mobile visitors.</p>
 
       leave-a-message:
         help: <p>Allow your mobile website visitors to easily leave you an email message.</p><br><p>Messages will be sent to this email address, so check your mail often.</p>
-        mobile-message: <p>REPLACE ME</p>
+        mobile-message: <p>Use this field to create a custom message for your mobile visitors.</p>
 
       link:
         help: <p>Add a link to a web page.</p>
