--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,24 @@ en:
     status:
       working: "Working..."
 
+  javascript:
+    delete_widget: "Are you sure you want to delete this widget?\n(all data will be lost)"
+    category:
+      delete_node: "Are you sure you want to delete? (Data will be lost)"
+      delete_nothing: "Please select an item to delete."
+      edit_nothing: "Please select an item to edit."
+      rename_nothing: "Please select an item to rename."
+
+      empty_node_list: "--None (Click Add above)--"
+      empty_name_error: "Name cannot be empty"
+      name_in_use_error: "Name is already in use"
+      add_node_success: "Item added successfully"
+    site_manager:
+      default_error: "We're sorry, something went wrong."
+      new_site_dialog_title: "Create New Site"
+      add_admin_dialog_title: "Add Admin for"
+      concede_ownership_dialog_title: "Concede Site Ownership"
+
   new_site:
     site_name: "Site Name:"
     site_url: "Mobile Site URL:"
